src/tests/test-src/errors/R10-readln-not-read-mode.syntran
// R10: readln-not-read-mode
// readln() was called on a file that wasn't opened in read ("r") mode

let f = open("build/rt_file_r10.txt", "w");
let line = readln(f);
